# TheKDSProject

./: .clang-format  .clang_format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  component.hpp  error_list.md  generator.hpp  kds  kds.cpp  lexer.hpp  messages.hpp  methods.hpp  nodes.hpp  out  out.ll  parser.hpp  preprocessor.hpp  r.asm  sample.kds  test  token.hpp
build_systems/make/: Makefile
build_systems/ninja/: .ninja_deps  .ninja_log  build.ninja  kds.exe.ilk
build_systems/vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  kds.exe.vcxproj  kds.exe.vcxproj.filters  kds.sln  kds.vcxproj  kds.vcxproj.filters
docs/: grammar.md
src/: kds.cpp
src/include/: generator.hpp  messages.hpp  module_reader.hpp  nodes.hpp  parser.hpp
