cmake_minimum_required(VERSION 3.20)
project(kds)
set(CMAKE_CXX_STANDARD 20)
option(KDS_ADDTOPATH "If true, the KDS executable will be copied to a path location (must be run with admin privileges)" ON)
if(UNIX)
	add_executable(kds ./kds.cpp)
	if(KDS_ADDTOPATH)
		execute_process(COMMAND cp kds /usr/bin/kds)
		execute_process(COMMAND rm -rf ./kds)
	endif(KDS_ADDTOPATH)
endif(UNIX)
if(WIN32)
	add_executable(kds.exe ./kds.cpp)
	if(KDS_ADDTOPATH)
		execute_process(COMMAND copy kds.exe C:/WINDOWS/system32/kds.exe)
		execute_process(COMMAND del ./kds.exe)
	endif(KDS_ADDTOPATH)
endif(WIN32)